--- a/readme
+++ b/readme
@@ -1,1 +1,1 @@
-Please Checkout bulkvita.com  These are old website files, new website cant be uploaded for security purposes.
+Please check out bulkvita.com  These are old website files, new website cant be uploaded for security purposes.
